tests/pos/simple/fixme.ts

/*@ alias idx[a]    = {v: number | v < a }  */

/*@ permute :: (x:number, y:idx[number]) => number */
function permute(x, y):number {
    return 0;
} 
